force-app/main/default/objects/Carrier_Order__c/Carrier_Order__c.object-meta.xml
<CustomObject>
    <label>Carrier Order</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>