force-app/main/default/objects/Carrier_Order__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <formula>Benefit_Order__r.Application_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Id</label>
    <type>Text</type>
</CustomField>