force-app/main/default/objects/Carrier_Order__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>