force-app/main/default/objects/Carrier_Order__c/fields/Assignment_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Message__c</fullName>
    <description>Benefit Transfer - Used in the Facilitator Play mode module.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assignment Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>