force-app/main/default/objects/Carrier_Order__c/fields/Audit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Audit_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carrier_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>