force-app/main/default/objects/Carrier_Order__c/fields/Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Date__c</fullName>
    <description>Benefit Transfer - Capture date on CO level from HI Carrier Information</description>
    <label>Authorized Date</label>
    <type>Date</type>
</CustomField>