force-app/main/default/objects/Carrier_Order__c/fields/Automated_Submission__c.field-meta.xml
<CustomField>
    <fullName>Automated_Submission__c</fullName>
    <label>Submission Automation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bot Submission</fullName>
            </value>
            <value>
                <fullName>HI Submission</fullName>
            </value>
            <value>
                <fullName>HI/Bot Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>