force-app/main/default/objects/Carrier_Order__c/fields/Automation_Message__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Automation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>