force-app/main/default/objects/Carrier_Order__c/fields/Automation_Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Automation_Message_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Automation Message Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>