force-app/main/default/objects/Carrier_Order__c/fields/Benefit_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type_Details__c</fullName>
    <label>Benefit Type Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>