force-app/main/default/objects/Carrier_Order__c/fields/Benefit_Types__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Types__c</fullName>
    <description>Shows all policies benefit type.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>