force-app/main/default/objects/Carrier_Order__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Carrier Name</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Carrier Orders</relationshipLabel>
    <relationshipName>Carrier_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>