force-app/main/default/objects/Carrier_Order__c/fields/Carrier_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Group_Number__c</fullName>
    <description>This will be auto-populated via RPA (Automation bot)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>