force-app/main/default/objects/Carrier_Order__c/fields/Checklist_For_Enrollment_Review__c.field-meta.xml
<CustomField>
    <fullName>Checklist_For_Enrollment_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Benefit Transfer - Once the Non-TADA Checklist Enrollment review get complete then mark this field as true.</description>
    <label>Checklist For Enrollment Review</label>
    <type>Checkbox</type>
</CustomField>