force-app/main/default/objects/Carrier_Order__c/fields/Contribution_Change__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Change__c</fullName>
    <label>Contribution Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>