force-app/main/default/objects/Carrier_Order__c/fields/Contribution_per_the_ER__c.field-meta.xml
<CustomField>
    <fullName>Contribution_per_the_ER__c</fullName>
    <description>Benefit Transfer - Used in TADA Checklist module</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contribution per the ER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>