force-app/main/default/objects/Carrier_Order__c/fields/Effective_Date_Changed_on__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Changed_on__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date Changed on</label>
    <type>DateTime</type>
</CustomField>