force-app/main/default/objects/Carrier_Order__c/fields/Eligible_for_Submission_Automation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Submission_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Submission Automation</label>
    <type>Checkbox</type>
</CustomField>