force-app/main/default/objects/Carrier_Order__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order End Date</label>
    <type>DateTime</type>
</CustomField>