force-app/main/default/objects/Carrier_Order__c/fields/Enrollment_Review_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Review_Completed_Date_Time__c</fullName>
    <description>Benefit Transfer - Used in Facilitator-2 Module</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Review Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>