force-app/main/default/objects/Carrier_Order__c/fields/Facilitator_1_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_1_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facilitator 1 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>