force-app/main/default/objects/Carrier_Order__c/fields/Facilitator_2_Plan_Build__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_2_Plan_Build__c</fullName>
    <description>Benefit Transfer - Used in Facilitator Module</description>
    <label>Facilitator 2 Plan Build</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>