force-app/main/default/objects/Carrier_Order__c/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow Up Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>