force-app/main/default/objects/Carrier_Order__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Number</label>
    <type>TextArea</type>
</CustomField>