force-app/main/default/objects/Carrier_Order__c/fields/Group_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Group_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Submission Date</label>
    <type>Date</type>
</CustomField>