force-app/main/default/objects/Carrier_Order__c/fields/HI_Submission_Automation_Message__c.field-meta.xml
<CustomField>
    <fullName>HI_Submission_Automation_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI Submission Automation Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>