force-app/main/default/objects/Carrier_Order__c/fields/Hippo_Link__c.field-meta.xml
<CustomField>
    <fullName>Hippo_Link__c</fullName>
    <description>Hippo link passed on during submission automation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hippo Link</label>
    <type>Url</type>
</CustomField>