force-app/main/default/objects/Carrier_Order__c/fields/Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Stage__c</fullName>
    <description>The picklist values for the Order Status on the Benefit Order and the Implementation Stage on the Carrier Order must be kept in sync.

The Previous Implementation Stage and Implementation stage should be in sync. This status is mapped to previous implementation stage and OB message is sent to app using Kafka.</description>
    <label>Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Routing</fullName>
            </value>
            <value>
                <fullName>Ready For Qualification</fullName>
                <default>true</default>
                <label>Ready For Qualification</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>With Advising</fullName>
            </value>
            <value>
                <fullName>With Sales</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Ready for OE Prep</fullName>
            </value>
            <value>
                <fullName>OE Prep</fullName>
            </value>
            <value>
                <fullName>OE</fullName>
            </value>
            <value>
                <fullName>OE Extended</fullName>
            </value>
            <value>
                <fullName>OE Verification/Checking Participation</fullName>
            </value>
            <value>
                <fullName>Ready for Submission Prep</fullName>
            </value>
            <value>
                <fullName>Submission Prep</fullName>
            </value>
            <value>
                <fullName>Ready for Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Item</fullName>
            </value>
            <value>
                <fullName>Approved Pending EE Audit</fullName>
            </value>
            <value>
                <fullName>Ready for Document Collection</fullName>
            </value>
            <value>
                <fullName>Collecting Documents</fullName>
            </value>
            <value>
                <fullName>Ready for Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Implementing Plans</fullName>
            </value>
            <value>
                <fullName>Ready to Send Plan Review</fullName>
            </value>
            <value>
                <fullName>Plan Review Sent</fullName>
            </value>
            <value>
                <fullName>Blocked Plan Review</fullName>
            </value>
            <value>
                <fullName>Unblock Plan Review</fullName>
            </value>
            <value>
                <fullName>Plans Confirmed</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Entry in Progress</fullName>
            </value>
            <value>
                <fullName>Ready to Send Enrollment Review</fullName>
            </value>
            <value>
                <fullName>Enrollment Review Sent</fullName>
            </value>
            <value>
                <fullName>Enrollment Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>