force-app/main/default/objects/Carrier_Order__c/fields/Initial_Owner__c.field-meta.xml
<CustomField>
    <fullName>Initial_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Benefit Transfer - Used in Facilitator/Advocate to capture Initial owner Module</description>
    <label>Initial Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carrier_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>