force-app/main/default/objects/Carrier_Order__c/fields/Is_Order_Eligible_For_Sub_Automation__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Eligible_For_Sub_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked as TRUE when a carrier order enters Submission from an automation-eligible entry point and triggers evaluation of the submission automation routing rules</description>
    <label>Evaluate Submission Automation Rules</label>
    <type>Checkbox</type>
</CustomField>