force-app/main/default/objects/Carrier_Order__c/fields/Logged_In_User_Check__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Check__c</fullName>
    <formula>If((($User.FirstName + &apos; &apos; +  $User.LastName) =  Primary_Owner__c),true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Check</label>
    <type>Checkbox</type>
</CustomField>