force-app/main/default/objects/Carrier_Order__c/fields/Member_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Member_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Submission Date</label>
    <type>Date</type>
</CustomField>