force-app/main/default/objects/Carrier_Order__c/fields/No_Of_Submission_Automation_Attempts__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Submission_Automation_Attempts__c</fullName>
    <label>No Of Submission Automation Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>