force-app/main/default/objects/Carrier_Order__c/fields/Number_Of_Collected_Documents__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Collected_Documents__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Benefit Transfer - To get the number of collected checklist document</description>
    <label>Number Of Collected Documents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>