force-app/main/default/objects/Carrier_Order__c/fields/OOO_Comments__c.field-meta.xml
<CustomField>
    <fullName>OOO_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OOO Comments</label>
    <type>TextArea</type>
</CustomField>