force-app/main/default/objects/Carrier_Order__c/fields/OOO_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>OOO_Timestamp__c</fullName>
    <description>This field will indicate if it is an Out of office order which means the order was reassigned to someone else. (Used for Benefits Transfer)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will indicate if it is an Out of office order which means the order was reassigned to someone else.  (Used for Benefits Transfer)</inlineHelpText>
    <label>OOO Timestamp</label>
    <type>DateTime</type>
</CustomField>