force-app/main/default/objects/Carrier_Order__c/fields/Open_Enrollment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Enrollment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Enrollment End Date</label>
    <type>Date</type>
</CustomField>