force-app/main/default/objects/Carrier_Order__c/fields/Order_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Order_Assignment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>