force-app/main/default/objects/Carrier_Order__c/fields/Order_Playable_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Playable_Date__c</fullName>
    <description>The date when CO will be eligible for Play Mode First Play (Order)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Playable Date</label>
    <type>Date</type>
</CustomField>