force-app/main/default/objects/Carrier_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Switch</fullName>
            </value>
            <value>
                <fullName>New to Gusto</fullName>
            </value>
            <value>
                <fullName>New line of Coverage</fullName>
            </value>
            <value>
                <fullName>Same carrier, plan/group level changes</fullName>
            </value>
            <value>
                <fullName>Same Carrier, NO Plan/Group Level Changes</fullName>
            </value>
            <value>
                <fullName>TAdA: No Pre OE Setup</fullName>
            </value>
            <value>
                <fullName>TAdA: Pre OE Setup</fullName>
            </value>
            <value>
                <fullName>Terminated Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>