force-app/main/default/objects/Carrier_Order__c/fields/Pending_Action_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Pending_Action_Responsibility__c</fullName>
    <defaultValue>&quot;Gusto&quot;</defaultValue>
    <description>This field is managed manually by Benefit Operations to indicate which party is responsible for current pending action items.</description>
    <inlineHelpText>Update the value in this field to indicate which party is responsible for current pending action items. Are we waiting on the Carrier, Gusto internal action, or the Customer.</inlineHelpText>
    <label>Pending Action Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
                <default>true</default>
                <label>Gusto</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>