force-app/main/default/objects/Carrier_Order__c/fields/Percent_Of_Documents_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Of_Documents_Completed__c</fullName>
    <description>Benefit Transfer - To calculate the percentage between total doc vs collected doc.</description>
    <formula>IF(Number_Of_Collected_Documents__c != 0, Number_Of_Collected_Documents__c  /  Total_Number_Of_Documents__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Of Documents Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>