force-app/main/default/objects/Carrier_Order__c/fields/Plan_Review_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Plan_Review_Completed_Date_Time__c</fullName>
    <description>Benefit Transfer - Used in Facilitator Module</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Review Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>