force-app/main/default/objects/Carrier_Order__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Benefit Transfer - Capture renewal date to calculate on benefit Order</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>