force-app/main/default/objects/Carrier_Order__c/fields/Requires_Routing__c.field-meta.xml
<CustomField>
    <fullName>Requires_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Routing</label>
    <type>Checkbox</type>
</CustomField>