force-app/main/default/objects/Carrier_Order__c/fields/Resign_Required__c.field-meta.xml
<CustomField>
    <fullName>Resign_Required__c</fullName>
    <description>Benefit Transfer - Used in Facilitator Check list page</description>
    <label>Resign Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>