force-app/main/default/objects/Carrier_Order__c/fields/Secondary_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Policy_Number__c</fullName>
    <description>Benefit Transfer - Sync line item from HI Carrier Information</description>
    <label>Secondary Policy Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>