force-app/main/default/objects/Carrier_Order__c/fields/Served_User__c.field-meta.xml
<CustomField>
    <fullName>Served_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user NBA most recently served this record to.</description>
    <inlineHelpText>The user NBA most recently served this record to</inlineHelpText>
    <label>NBA Served User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carrier_Orders7</relationshipName>
    <type>Lookup</type>
</CustomField>