force-app/main/default/objects/Carrier_Order__c/fields/Stage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Stage_Detail__c</fullName>
    <description>The picklist values for the Status Detail on the Benefit Order and the Stage Detail on the Carrier Order must be kept in sync.</description>
    <label>Implementation Stage Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Implementation_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Carve out group</fullName>
            </value>
            <value>
                <fullName>[NP] Duplicate: Changed Carrier (Bundle Ancillary)</fullName>
            </value>
            <value>
                <fullName>[NP] Duplicate: Changed Carrier (ER Choice)</fullName>
            </value>
            <value>
                <fullName>[NP] Duplicate: Changed Carrier (Failed QA)</fullName>
            </value>
            <value>
                <fullName>[NP+R] Duplicate: Other</fullName>
            </value>
            <value>
                <fullName>Effective Date Not Supported</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Company not authorized in state</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Existing Carrier - Transferred to BOR Opportunity</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Husband/Wife Only</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Insufficient Payroll</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: No eligible employees</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Not enough EE&apos;s in state</fullName>
            </value>
            <value>
                <fullName>[NP+R] Ineligible: No workers&apos; compensation</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Owner Only</fullName>
            </value>
            <value>
                <fullName>[NP] Ineligible: Unsupported State</fullName>
            </value>
            <value>
                <fullName>Nonpayment of premium under a previous policy</fullName>
            </value>
            <value>
                <fullName>[NP] Non-Responsive Employer</fullName>
            </value>
            <value>
                <fullName>Owner only group</fullName>
            </value>
            <value>
                <fullName>[NP+R] Participation: Ancillary Participation Not Met</fullName>
            </value>
            <value>
                <fullName>[NP+R] Participation: Medical Participation Not Met</fullName>
            </value>
            <value>
                <fullName>Participation rate not met</fullName>
            </value>
            <value>
                <fullName>Post Signature Cancel</fullName>
            </value>
            <value>
                <fullName>[NP] Post-Signature Cancel: Chose Competitor - Earlier Effective Date</fullName>
            </value>
            <value>
                <fullName>[NP] Post-Signature Cancel: Did Not Become Gusto Customer</fullName>
            </value>
            <value>
                <fullName>[NP+R] Post-Signature Cancel: No Longer Interested</fullName>
            </value>
            <value>
                <fullName>[NP] Post-Signature Cancel: Too Expensive</fullName>
            </value>
            <value>
                <fullName>Post Signature Ineligible</fullName>
            </value>
            <value>
                <fullName>[R] Renewal: Carrier Canceled - Nonpayment</fullName>
            </value>
            <value>
                <fullName>[R] Renewal: Carrier Canceled - Recertification</fullName>
            </value>
            <value>
                <fullName>[R] Renewal: Switched to new broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>