force-app/main/default/objects/Carrier_Order__c/fields/Stage_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Stage_Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Stage Timestamp</label>
    <type>DateTime</type>
</CustomField>