force-app/main/default/objects/Carrier_Order__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>IF( $RecordType.Name != &apos;Benefits BoR&apos;, TODAY(), null)</defaultValue>
    <description>Used by Benefit Transfer team</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>