force-app/main/default/objects/Carrier_Order__c/fields/Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Change Date Time</label>
    <type>DateTime</type>
</CustomField>