force-app/main/default/objects/Carrier_Order__c/fields/Submission_Completion_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submission_Completion_Notes__c</fullName>
    <description>This field is filled by the fulfillment team when moving a Carrier Order from submission to confirmation stage.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Completion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>