force-app/main/default/objects/Carrier_Order__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NP Submission Deadline</label>
    <type>Date</type>
</CustomField>