force-app/main/default/objects/Carrier_Order__c/fields/Submitted_Completed_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Completed_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Completed Datetime</label>
    <type>DateTime</type>
</CustomField>