force-app/main/default/objects/Carrier_Order__c/fields/Ticket_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is marked as ‘True’ by the system when there is an open ticket associated to the Carrier Order assigned to one of the Carrier Order Owners</description>
    <inlineHelpText>This field is marked as ‘True’ by the system when there is an open ticket associated to the Carrier Order assigned to one of the Carrier Order Owners</inlineHelpText>
    <label>Ticket Action Required</label>
    <type>Checkbox</type>
</CustomField>