force-app/main/default/objects/Carrier_Order__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <description>Created for Jira BT-7974</description>
    <formula>Benefit_Order__r.Opportunity__r.NumberOfEmployees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>