force-app/main/default/objects/Carrier_Order__c/fields/Total_No_Of_Docs_Required_to_Collect__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Docs_Required_to_Collect__c</fullName>
    <description>Benefit Transfer - Calculate No of docs require to collect.</description>
    <formula>Total_Number_Of_Documents__c - Number_Of_Collected_Documents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No Of Docs Required to Collect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>