force-app/main/default/objects/Carrier_Order__c/fields/Total_Number_Of_Documents__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Documents__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Benefit Transfer - Get total number checklist on CO level</description>
    <label>Total Number Of Documents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>