force-app/main/default/objects/Carrier_Order__c/fields/Waiting_Period_Change__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Change__c</fullName>
    <label>Waiting Period Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>