force-app/main/default/objects/Carrier_Order__c/fields/ZP_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>ZP_Company_Id__c</fullName>
    <formula>Benefit_Order__r.ZP_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZP Company Id</label>
    <type>Text</type>
</CustomField>