force-app/main/default/objects/Carrier_Order__c/recordTypes/Benefits_BoR.recordType-meta.xml
<RecordType>
    <fullName>Benefits_BoR</fullName>
    <active>true</active>
    <label>Benefits BoR</label>
</RecordType>