force-app/main/default/objects/Carrier_Order__c/recordTypes/Carrier_Termination.recordType-meta.xml
<RecordType>
    <fullName>Carrier_Termination</fullName>
    <active>true</active>
    <label>Carrier Termination</label>
</RecordType>