force-app/main/default/objects/Carrier_Order__c/recordTypes/New_Plan.recordType-meta.xml
<RecordType>
    <fullName>New_Plan</fullName>
    <active>true</active>
    <label>New Plan</label>
</RecordType>