force-app/main/default/objects/Carrier_Order__c/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <label>Renewal</label>
</RecordType>